--- a/src/classes/TestPackagesInstalled.cls
+++ b/src/classes/TestPackagesInstalled.cls
@@ -6,7 +6,7 @@ public class TestPackagesInstalled extends cinnamon.BaseTest {
 	    s.waitForElementPresent('css=.pbBody table');
 	    s.verifyElementPresent('css=th a:contains(\'Affiliations\')');
 	    s.verifyElementPresent('css=th a:contains(\'Contacts & Organizations\')');
-	    //s.verifyElementPresent('css=th a:contains(\'Households\')');
+	    s.verifyElementPresent('css=th a:contains(\'Households\')');
 	    s.verifyElementPresent('css=th a:contains(\'Recurring Donations\')');
 	    s.verifyElementPresent('css=th a:contains(\'Relationships\')');
 	}
