--- a/src/classes/TestUtil.cls
+++ b/src/classes/TestUtil.cls
@@ -1,15 +1,16 @@
 public class TestUtil {
 
-    public static final String BASE_URL = 'https://bde.na5.visual.force.com/';
-    public static final String BATCH_DATA_ENTRY_PAGE = 'apex/BatchEntry';
-    public static final String BATCH_DATA_ENTRY_URL = BASE_URL + 'apex/BatchEntry';
+    public static final String BASE_URL = 'https://c.na5.visual.force.com/';
+    public static final String BATCH_DATA_ENTRY_PAGE = 'apex/BDE_BatchEntry';
+    public static final String BATCH_DATA_ENTRY_URL = BASE_URL + 'apex/BDE_BatchEntry';
     public static final String NEW_BATCH_BUTTON = 'name=j_id0:j_id8:j_id9:j_id13';
     public static final String BATCH_NAME_FIELD = 'id=j_id0:j_id23:j_id24:j_id26:j_id27:0:j_id28';
-    public static final String OPPORTUNITY_NAME_FIELD = 'css=.sticky-name';
-    public static final String OPPORTUNITY_NAME_PUSHPIN = 'css=#sticky-name';
+    public static final String OPPORTUNITY_NAME_FIELD = 'css=.sticky-Name';
+    public static final String OPPORTUNITY_NAME_PUSHPIN = 'css=#sticky-Name';
     public static final String CONTACT_LOOKUP_FIELD = 'css=.sticky-npspcontactid';
-    public static final String OPPORTUNITY_CLOSE_DATE_FIELD = 'css=.sticky-closedate';
-    public static final String OPPORTUNITY_STAGE_FIELD = 'css=.sticky-stagename';
+    public static final String OPPORTUNITY_CLOSE_DATE_FIELD = 'css=.sticky-CloseDate';
+    //public static final String OPPORTUNITY_STAGE_FIELD = 'css=.sticky-StageName';
+    public static final String OPPORTUNITY_STAGE_FIELD = 'j_id0:j_id24:j_id25:recInfo:j_id60:2:j_id61:j_id64';
     public static final String SAVE_BUTTON = 'css=.btnSave';
     public static final String EDIT_LINK = 'css=.editLink';
     public static final String DELETE_LINK = 'css=a.delLink';
@@ -27,11 +28,11 @@ public class TestUtil {
     public static final String SETTINGS_EDIT_LINK= 'css=.editLink';
     public static final String SETTINGS_DELETE_LINK = 'css=.delLink';
 
-    public static bde__Batch__c createNewBatch() {
-        bde__Batch__c batch = new bde__Batch__c();
+    public static Batch__c createNewBatch() {
+        Batch__c batch = new Batch__c();
         batch.name = 'Opportunties' + System.currentTimeMillis();
-        batch.bde__Batch_Status__c = 'In Progress';
-        batch.bde__Object_Name__c = 'opportunity';
+        batch.Batch_Status__c = 'In Progress';
+        batch.Object_Name__c = 'opportunity';
         insert batch;
         return batch;
     }
@@ -41,7 +42,7 @@ public class TestUtil {
         opp.Name = 'Donation' + System.currentTimeMillis();
         opp.CloseDate = System.today();
         opp.StageName = 'Closed Won';
-        opp.bde__Batch__c = batchId;
+        opp.Batch__c = batchId;
         insert opp;
         return opp;
     }
