Changed to use getStartingPath method to open BDE page

--- a/src/classes/ShouldAccessBatchDataEntry.cls
+++ b/src/classes/ShouldAccessBatchDataEntry.cls
@@ -1,7 +1,10 @@
 public class ShouldAccessBatchDataEntry extends cinnamon.BaseTest {
+    public override String getStartingPath(cinnamon.CN_Context context) {
+        return TestUtil.BATCH_DATA_ENTRY_URL;
+    }
+
 	public override void test(cinnamon.CN_Context context) { 
 		selenium1.DefaultSelenium s = getSelenium();
-		s.open(TestUtil.BATCH_DATA_ENTRY_URL);
 		s.verifyTextPresent('Batch Data Entry Home');
     }
 }
