Added Database.emptyRecycleBin to tearDown

--- a/src/classes/ShouldCreateNewRecords.cls
+++ b/src/classes/ShouldCreateNewRecords.cls
@@ -32,5 +32,6 @@ public class ShouldCreateNewRecords extends cinnamon.BaseTest {
     	Ids.add((String) context.get('batchId'));
     	Ids.add((String) context.get('oppId'));
     	Database.delete(Ids);
+        Database.emptyRecycleBin(Ids);
     }
 }
