--- a/src/classes/ShouldPushpinMakeFieldsSticky.cls
+++ b/src/classes/ShouldPushpinMakeFieldsSticky.cls
@@ -39,5 +39,6 @@ public class ShouldPushpinMakeFieldsSticky extends cinnamon.BaseTest {
     	Ids.add((String) context.get('batchId'));
     	Ids.add((String) context.get('oppId'));
     	Database.delete(Ids);
+        Database.emptyRecycleBin(Ids);
     }
 }
